--- a/My_Auth/src/main/resources/bootstrap.yml
+++ b/My_Auth/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
   application:
     name: my-auth
   profiles:
-    active: dev
+    active: mac
   devtools:
     restart:
       enabled: false
