--- a/My_Business_01/pom.xml
+++ b/My_Business_01/pom.xml
@@ -17,6 +17,11 @@
             <groupId>com.www</groupId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <artifactId>My_Common_Redis</artifactId>
+            <groupId>com.www</groupId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Nacos -->
         <dependency>
